k8s/changelog/service.yml
#@ load("@ytt:data", "data")
#! https://github.com/k14s/ytt/blob/master/examples/data-values/config.yml
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.app.name
  namespace: #@ data.values.namespace
spec:
  ports:
    - name: http
      port: #@ data.values.app.http_port
      protocol: TCP
      targetPort: #@ data.values.app.http_port
  selector:
    app: #@ data.values.app.name
