k8s/changelog/app.yml
#@ load("@ytt:data", "data")
#! https://github.com/k14s/ytt/blob/master/examples/data-values/config.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: #@ data.values.app.name
  namespace: #@ data.values.namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: cert-manager-webhook-dnsimple-production
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  tls:
    - hosts:
        - #@ data.values.fqdn
        - www.changelog.com
        - 2020.changelog.com
      secretName: wildcard-acme-tls
    - hosts:
        - brainscience.fm
      secretName: brainscience-fm-acme-tls
    - hosts:
        - changelog.fm
      secretName: changelog-fm-acme-tls
    - hosts:
        - founderstalk.fm
      secretName: founderstalk-fm-acme-tls
    - hosts:
        - gotime.fm
      secretName: gotime-fm-acme-tls
    - hosts:
        - jsparty.fm
      secretName: jsparty-fm-acme-tls
    - hosts:
        - practicalai.fm
      secretName: practicalai-fm-acme-tls
  rules:
    - host: #@ data.values.fqdn
      http:
        paths:
          - backend:
              serviceName: #@ data.values.app.name
              servicePort: #@ data.values.app.http_port
    - host: www.changelog.com
      http:
        paths:
          - backend:
              serviceName: #@ data.values.app.name
              servicePort: #@ data.values.app.http_port
    - host: 2020.changelog.com
      http:
        paths:
          - backend:
              serviceName: #@ data.values.app.name
              servicePort: #@ data.values.app.http_port
    - host: brainscience.fm
      http:
        paths:
          - backend:
              serviceName: #@ data.values.app.name
              servicePort: #@ data.values.app.http_port
    - host: changelog.fm
      http:
        paths:
          - backend:
              serviceName: #@ data.values.app.name
              servicePort: #@ data.values.app.http_port
    - host: founderstalk.fm
      http:
        paths:
          - backend:
              serviceName: #@ data.values.app.name
              servicePort: #@ data.values.app.http_port
    - host: gotime.fm
      http:
        paths:
          - backend:
              serviceName: #@ data.values.app.name
              servicePort: #@ data.values.app.http_port
    - host: jsparty.fm
      http:
        paths:
          - backend:
              serviceName: #@ data.values.app.name
              servicePort: #@ data.values.app.http_port
    - host: practicalai.fm
      http:
        paths:
          - backend:
              serviceName: #@ data.values.app.name
              servicePort: #@ data.values.app.http_port
---
apiVersion: v1
kind: Service
metadata:
  name: #@ data.values.app.name
  namespace: #@ data.values.namespace
spec:
  ports:
    - name: http
      port: #@ data.values.app.http_port
      protocol: TCP
      targetPort: #@ data.values.app.http_port
  selector:
    app: #@ data.values.app.name
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: #@ data.values.app.name
  namespace: #@ data.values.namespace
  labels:
    app: #@ data.values.app.name
    #! https://keel.sh/docs/#policies
    keel.sh/policy: force
    keel.sh/match-tag: "true"
spec:
  replicas: #@ data.values.app.replicas
  selector:
    matchLabels:
      app: #@ data.values.app.name
  template:
    metadata:
      labels:
        app: #@ data.values.app.name
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app
                    operator: In
                    values:
                      - #@ data.values.app.name
              topologyKey: "kubernetes.io/hostname"
      containers:
        - name: backup-restore
          image: #@ data.values.db.restore.image
          imagePullPolicy: #@ data.values.image.pull_policy
          command:
            - /bin/bash
            - -c
            - |-
              echo "I'm here in case someone needs to backup or restore the db or uploads..."
              while true
              do
                sleep 3600
              done
          volumeMounts:
            - mountPath: "/uploads"
              name: uploads
        - name: #@ data.values.app.name
          image: #@ data.values.app.image
          imagePullPolicy: #@ data.values.image.pull_policy
          #! command:
          #!   - iex
          #!   - --sname
          #!   - debug
          #!   - -S
          #!   - mix
          #!   - phx.server
          ports:
            - name: phoenix
              containerPort: #@ data.values.app.http_port
          resources:
            limits:
              cpu: #@ data.values.app.cpu_max
              memory: #@ data.values.app.mem_max
            requests:
              cpu: #@ data.values.app.cpu_min
              memory: #@ data.values.app.mem_min
          readinessProbe:
            httpGet:
              path: /health
              port: phoenix
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            periodSeconds: 15
            timeoutSeconds: 14
          startupProbe:
            httpGet:
              path: /health
              port: phoenix
              httpHeaders:
                - name: Host
                  value: 127.0.0.1
            failureThreshold: 30
            periodSeconds: 10
          volumeMounts:
            - mountPath: "/app/priv/uploads"
              name: uploads
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads
