k8s/changelog/ingress.yml
#@ load("@ytt:data", "data")
#! https://github.com/k14s/ytt/blob/master/examples/data-values/config.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: #@ data.values.app.name
  namespace: #@ data.values.namespace
  annotations:
    kubernetes.io/ingress.class: nginx
    #! cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - #@ data.values.fqdn
      secretName: #@ data.values.app.name + "-acme-tls"
  rules:
    - host: #@ data.values.fqdn
      http:
        paths:
          - backend:
              serviceName: #@ data.values.app.name
              servicePort: #@ data.values.app.http_port
